package com.example.utmentor.models.webModels.users;

public record CreateUserResponse(
        String username
) {}
